--- a/code/sandbox_ra/requirements.txt
+++ b/code/sandbox_ra/requirements.txt
@@ -1,25 +1,43 @@
+altair==4.1.0
+anndata==0.7.5
+attrs==20.3.0
+cvxpy==1.1.7
 cycler==0.10.0
+ecos==2.0.7.post1
+entrypoints==0.3
+future==0.18.2
+h5py==3.1.0
+Jinja2==2.11.2
 joblib==0.17.0
+jsonschema==3.2.0
 kiwisolver==1.3.1
+MarkupSafe==1.1.1
 matplotlib==3.3.3
 matplotlib-venn==0.11.6
+natsort==7.1.0
 numpy==1.19.4
+osqp==0.6.1
+packaging==20.8
 pandas==1.1.4
 patsy==0.5.1
 Pillow==8.0.1
 plox==0.0.2
 progressbar2==3.53.1
 pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-utils==2.4.0
 pytz==2020.4
+rnasieve @ git+https://github.com/numpde/rna-sieve.git@92862b1ceb2a6ea9bd3273ed7c870963de538497
 scikit-learn==0.23.2
 scipy==1.5.4
+scs==2.1.2
 six==1.15.0
 sklearn==0.0
 statsmodels==0.12.1
 tabulate==0.8.7
 tcga @ git+https://github.com/numpde/tcga@5545e56012b76e398a80870904bc981d6802feed
 threadpoolctl==2.1.0
+toolz==0.11.1
 twig @ git+https://github.com/numpde/twig.git@64d2b52a3c427560b636423f183ba76e690cbce7
 xmltodict==0.12.0
