--- a/code/sandbox_ra/requirements.txt
+++ b/code/sandbox_ra/requirements.txt
@@ -20,7 +20,7 @@ osqp==0.6.1
 packaging==20.8
 pandas==1.1.4
 patsy==0.5.1
-Pillow==8.0.1
+Pillow>=8.1.1
 plox==0.0.2
 progressbar2==3.53.1
 pyparsing==2.4.7
